--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,14 @@
       href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Titillium+Web:wght@300;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Readex+Pro&family=Titillium+Web:wght@300;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Readex+Pro&family=Titillium+Web:wght@300;600&family=Wallpoet&display=swap"
+      rel="stylesheet"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
